--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 .vscode/launch.json
 source/result.txt
-source/uninstall.exe
-source/zipchord-exe-2.4.0-rc.1.zip
-source/zipchord-install-2.4.0-rc.1.zip
-source/zipchord-install.exe
-source/zipchord.exe
+*.exe
+*.zip
